objects/DMAPP__Dealmaker_Insight_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings control certain aspects of Dealmaker Align behavior.</description>
    <fields>
        <fullName>DMAPP__Default_Namespace__c</fullName>
        <description>This is the default namespace that will be used on Insight objects that do not have a namespace defined.</description>
        <inlineHelpText>This is the default namespace that will be used on Insight objects that do not have a namespace defined.</inlineHelpText>
        <label>Default Namespace</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting disables chatter for Smart Maps</description>
        <inlineHelpText>This setting disables chatter for Smart Maps</inlineHelpText>
        <label>Disable Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Enable_New_Insight_Maps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to control whether users will see the new or classic insight map screens. Note Before enabling this setting, your administrator must have run the upgrade scripts to convert existing maps from the old to new formats. (Deprecated)</description>
        <inlineHelpText>This field is used to control whether users will see the new or classic insight map screens. Note Before enabling this setting, your administrator must have run the upgrade scripts to convert existing maps from the old to new formats. (Deprecated)</inlineHelpText>
        <label>Enable New Insight Maps (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Export_Version__c</fullName>
        <description>The target version for which objects are to be export. This determines which fields will be exported for the objects</description>
        <inlineHelpText>The target version for which objects are to be export, i.e. 8.26</inlineHelpText>
        <label>Export Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Licensed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is deprecated. Access to Dealmaker Align is controlled by license allocation.</description>
        <inlineHelpText>This field is deprecated. Access to Dealmaker Align is controlled by license allocation.</inlineHelpText>
        <label>Licensed (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Smart_Sales_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is deprecated. Access to the Smart Library in Dealmaker Align is controlled by license allocation.</description>
        <inlineHelpText>This field is deprecated. Access to the Smart Library in Dealmaker Align is controlled by license allocation.</inlineHelpText>
        <label>Smart Sales Kit (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Solution_Segmentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solution Types</label>
        <type>Checkbox</type>
    </fields>
    <label>Dealmaker Align Settings</label>
</CustomObject>